# chess-aggregator

./: .gitignore  Cargo.toml  pinned.nix  shell.nix
src/: chess_db.rs  config.rs  extractor.rs  file.rs  game_stats.rs  ingest.rs  lib.rs  main.rs  merge.rs  pgn.rs  rocks_cfg.rs  server.rs  traversal.rs  visitor.rs  worker.rs
